--- a/sensor/templates/sensor/index.html
+++ b/sensor/templates/sensor/index.html
@@ -3,12 +3,18 @@
 
 <head>
     <link rel="stylesheet" href="{% static 'sensor/style.css' %}" />
+    <script src="//d3js.org/d3.v4.min.js"></script>
+
 </head>
 
 <body>
 
-<h1>Past 1000 settings</h1>
-    <table>
+<h1>Past 1000 Readings</h1>
+
+<svg width="960" height="300"></svg>
+
+
+    <!-- <table>
         <tr>
             <th>Id</th>
             <th>Time</th>
@@ -28,15 +34,18 @@
 
 
         </tr>
-        {% endfor %}
+        {% endfor %} -->
     </table>
 
 
     <script>
         var data = {{ data | safe }}
 
-        console.log(data)
+        // console.log(data)
+
     </script>
+
+    <script src="{% static 'sensor/js/graph.js' %}"></script>
 
 </body>
 
