--- a/sensor/templates/sensor/today.html
+++ b/sensor/templates/sensor/today.html
@@ -1,39 +1,25 @@
-<style>
+{% load static %}
+<html>
 
-html {
-  font-size: 14px;
-  font-family: Helvetica, Open Sans;
-}
+<head>
+    <link rel="stylesheet" href="{% static 'sensor/style.css' %}" />
+    <script src="//d3js.org/d3.v4.min.js"></script>
 
-table {
-  border-collapse: collapse;
-}
-table, th, td, th {
-  border: 1px solid gray;
-}
+</head>
 
-td, th {
-  padding: 0.5em;
-}
+<body>
 
-td.movement {
-  background-color: lightgreen;
-}
+<h1>Today's readings</h1>
+  <svg width="960" height="300"></svg>
 
-td.noMovement {
-  background-color: Gainsboro;
-}
-
-</style>
-
-<table>
+<!-- <table>
 <tr>
   <th>Id</th>
   <th>Time</th>
   <th>Result</th>
-</tr>
+</tr> -->
 
-{% for reading in readings %}
+<!-- {% for reading in readings %}
 <tr>
 <td><strong> {{ reading.id }}</strong></td>
 <td>{{ reading.date_time | date:"SHORT_DATETIME_FORMAT" }}</td>
@@ -46,12 +32,17 @@ td.noMovement {
 
 
 </tr>
-{% endfor %}
+{% endfor %} -->
 </table>
 
 
 <script>
 
 var data = {{ data | safe}}
-console.log( data )
 </script>
+
+<script src="{% static 'sensor/js/graph.js' %}"></script>
+
+
+</body>
+</html>
