--- a/sensor/static/sensor/style.css
+++ b/sensor/static/sensor/style.css
@@ -1,8 +1,23 @@
 /* base styles */
+*, *:before, *:after {
+  box-sizing: inherit;
+}
+
 html {
   font-size: 16px;
   font-family: Helvetica, Open Sans;
   background-color: whitesmoke;
+  box-sizing: border-box;
+
+}
+
+div.content {
+  padding: 0.5em;
+}
+
+body {
+  margin: 0;
+
 }
 
 .center {
@@ -44,4 +59,36 @@ td.noMovement {
 
 .label {
   font-size: 14px;
+}
+
+
+/*navbar*/
+.navbar {
+  width: 100%;
+  background-color: #222;
+}
+
+
+.navbar ul {
+  margin: 0;
+  padding: 0;
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  align-content: space-between;
+  list-style: none;
+}
+
+.navItem {
+  padding: 15px;
+  font-weight: 800;
+}
+
+li:hover {
+  background-color: lightgray;
+  color: #222;
+}
+
+li a {
+  color: #db7c24;
 }
