--- a/sensor/templates/sensor/today.html
+++ b/sensor/templates/sensor/today.html
@@ -8,12 +8,17 @@
 </head>
 
 <body>
+  {% include "sensor/navbar.html" %}
+
+
+  <div class="content">
+
 
 <h1>Today's readings</h1>
 <p>The red lines indicate motion</p>
   <svg width="500" height="1500"></svg>
 </table>
-
+</div>
 
 <script>
 
