flex layout for main pages

--- a/sensor/templates/sensor/occupied.html
+++ b/sensor/templates/sensor/occupied.html
@@ -2,6 +2,8 @@
 
 <html>
 <head>
+  <meta name="viewport" content="width=device-width">
+
   <link rel="stylesheet" href="{% static 'sensor/style.css' %}" />
   <link rel="stylesheet" href="{% static 'sensor/occupied.css' %}" />
 </head>
