--- a/sensor/static/sensor/style.css
+++ b/sensor/static/sensor/style.css
@@ -8,23 +8,31 @@ html {
   font-family: Helvetica, Open Sans;
   background-color: whitesmoke;
   box-sizing: border-box;
-
-}
-
-div.content {
-  padding: 0.5em;
 }
 
 body {
   margin: 0;
-
+  padding: 0;
 }
+
+#graphic {
+}
+
+div.content {
+  padding: 0.5em;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  flex-wrap: nowrap;
+}
+
+div.
+
+
 
 .center {
   margin: 0 auto;
 }
-
-
 
 strong {
   color: maroon;
@@ -49,7 +57,6 @@ td.noMovement {
   background-color: Gainsboro;
 }
 
-
 /* d3 styles */
 
 .line {
@@ -61,13 +68,11 @@ td.noMovement {
   font-size: 14px;
 }
 
-
 /*navbar*/
 .navbar {
   width: 100%;
   background-color: #222;
 }
-
 
 .navbar ul {
   margin: 0;
