--- a/sensor/templates/sensor/today.html
+++ b/sensor/templates/sensor/today.html
@@ -6,7 +6,7 @@
 
 <head>
     <link rel="stylesheet" href="{% static 'sensor/style.css' %}" />
-    <script src="//d3js.org/d3.v4.min.js"></script>
+    <script src="{% static 'sensor/js/libs/d3.v4.min.js' %}"></script>
 
 </head>
 
