--- a/sensor/templates/sensor/today.html
+++ b/sensor/templates/sensor/today.html
@@ -18,7 +18,7 @@
 
 
 <h1>Today's readings</h1>
-<p>The red lines indicate motion</p>
+<p>The <strong>red lines</strong> indicate motion</p>
   <svg id="graphic" width="350" height="1500"></svg>
 </table>
 </div>
